# ViT-RatSLAM

./: .gitignore  OPEN_SOURCE_CHECKLIST.md  README.md  RatSLAM-SALAD使用&测试指南.md  THIRD_PARTY_NOTICES.md
docker/: Dockerfile.ratslam  README-ratslam-docker.md  entrypoint.sh
salad-main/: train_ratslam.py
salad-main/dataloaders/: BagPlacesDataModule.py  BagPlacesDataset.py
salad-main/models/backbones/: dinov2.py
salad-svc/: Dockerfile.salad  SALAD-service.md
salad-svc/scripts/: extract_places.py  salad_cosine.py  timestamps_example.txt
salad-svc/service/: __init__.py  compute_salad.py  requirements.txt  svc.py
scripts/: build_ratslam_image.sh  export_vit_ratslam_release.sh  run_ratslam_container.sh
src/: CMakeLists.txt
src/ratslam_ros/: CMakeLists.txt  README.md  package.xml
src/ratslam_ros/config/: config_dji.txt.in  config_irataus.txt.in  config_oxford_newcollege.txt.in  config_stlucia.txt.in
src/ratslam_ros/launch/: dji.launch  dji_video_to_bag.launch  irataus.launch  stlucia.launch
src/ratslam_ros/scripts/: mp4_publisher.py
src/ratslam_ros/src/: main_lv.cpp  main_vo.cpp
src/ratslam_ros/src/graphics/: local_view_scene.h
src/ratslam_ros/src/ratslam/: local_view_match.cpp  local_view_match.h  posecell_network.cpp
src/salad_vpr/: CMakeLists.txt  package.xml
src/salad_vpr/cfg/: SaladVpr.cfg
src/salad_vpr/config/: dji.yaml  irat.yaml  stlucia.yaml
src/salad_vpr/msg/: Embedding.msg
src/salad_vpr/scripts/: vpr_node.py
src/salad_vpr/srv/: QueryTopK.srv
